poprawiono style oraz drobne błędy

--- a/mapa.html
+++ b/mapa.html
@@ -25,11 +25,11 @@
         <nav id="hamburger-nav">
             <input type="checkbox" id="burger-icon">
             <ul id="hamburger-menu">
-                <li><a href="index.html" class="active">atlas</a></li>
+                <li><a href="index.html">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
-                <li><a href="mapa.html">mapa</a></li>
+                <li><a href="mapa.html" class="active">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
                 <li><a href="wybitny-czlowiek.html">o autorze</a></li>
             </ul>
@@ -48,8 +48,7 @@
         </ul>
     </nav>
     <div id="container">
-        <!--Kod wygenerowany przy pomocy strony https://embed-googlemap.com/ w validatorze pokazuje błędy-->
-        <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=1000&amp;height=800&amp;hl=en&amp;q=bieszczady&amp;t=&amp;z=9&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://linktr.ee/sparklesyt">sparklesyt</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:700px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:700px;}.gmap_iframe {height:700px!important;}</style></div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22206.846732412494!2d22.351529502459694!3d49.24236556843685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1732474429126!5m2!1spl!2spl" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <footer>
         Stronę wykonał <em>Konrad Szyszlak 131524</em> w ramach projektu
