--- a/posty.html
+++ b/posty.html
@@ -25,10 +25,10 @@
         <nav id="hamburger-nav">
             <input type="checkbox" id="burger-icon">
             <ul id="hamburger-menu">
-                <li><a href="index.html" class="active">atlas</a></li>
+                <li><a href="index.html">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
                 <li><a href="przepisy.html">przepisy</a></li>
-                <li><a href="posty.html">posty</a></li>
+                <li><a href="posty.html" class="active">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
                 <li><a href="wybitny-czlowiek.html">o autorze</a></li>
