--- a/przepisy.html
+++ b/przepisy.html
@@ -25,9 +25,9 @@
         <nav id="hamburger-nav">
             <input type="checkbox" id="burger-icon">
             <ul id="hamburger-menu">
-                <li><a href="index.html" class="active">atlas</a></li>
+                <li><a href="index.html">atlas</a></li>
                 <li><a href="zdjecia.html">zdjęcia</a></li>
-                <li><a href="przepisy.html">przepisy</a></li>
+                <li><a href="przepisy.html" class="active">przepisy</a></li>
                 <li><a href="posty.html">posty</a></li>
                 <li><a href="mapa.html">mapa</a></li>
                 <li><a href="kontakt.html">kontakt</a></li>
