poprawki map i menu

--- a/mapa.html
+++ b/mapa.html
@@ -48,7 +48,7 @@
         </ul>
     </nav>
     <div id="container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22206.846732412494!2d22.351529502459694!3d49.24236556843685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1732474429126!5m2!1spl!2spl" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22206.846732412494!2d22.351529502459694!3d49.24236556843685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1732474429126!5m2!1spl!2spl" width="1920" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <footer>
         Stronę wykonał <em>Konrad Szyszlak 131524</em> w ramach projektu
