finalna wersja bez dokumentacji

--- a/posty.html
+++ b/posty.html
@@ -62,7 +62,7 @@
                     <input type="file" id="post-image" name="post-image" accept="image/*">
                     
                     <label for="post-content">Opisz swoje znaleziska:</label>
-                    <textarea id="post-content" name="post-content" placeholder="Wpisz treść swojego posta..."></textarea>
+                    <textarea name="post-content" placeholder="Wpisz treść swojego posta..."></textarea>
                     
                     <button type="submit">Opublikuj post</button>
                 </form>
